--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -28,15 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
   bloc: ^8.1.1
   cupertino_icons: ^1.0.2
   dio: ^5.1.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_screenutil: ^5.7.0
+  internet_connection_checker: ^1.0.0+1
   intl: ^0.18.0
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
