--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_screenutil: ^5.7.0
+  flutter_date_picker_timeline: ^0.3.3
+  syncfusion_flutter_charts: ^21.1.41
 
   internet_connection_checker: ^1.0.0+1
-  intl: ^0.18.0
+  intl: ^0.17.0
   meta: ^1.8.0
 
 dev_dependencies:
