--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
   sdk: '>=2.19.1 <3.0.0'
 
 dependencies:
+  flutter:
+    sdk: flutter
   bloc: ^8.1.1
   cupertino_icons: ^1.0.2
   dio: ^5.1.1
   equatable: ^2.0.5
-  flutter:
-    sdk: flutter
   flutter_bloc: ^8.1.2
   flutter_date_picker_timeline: ^0.3.3
   flutter_screenutil: ^5.7.0
@@ -29,12 +29,19 @@ dependencies:
   syncfusion_flutter_charts: ^21.1.41
   webview_flutter: ^4.2.0
   flutter_svg: 2.0.7
+  another_flushbar: ^1.12.30
+  # firebase_core: any
+  # firebase_auth: ^4.6.3
+  modal_progress_hud_nsn: ^0.4.0
+  test_api: ^0.6.1
+  cloud_firestore: ^4.8.2
+  flutter_otp_text_field: ^1.1.1
 
 dev_dependencies:
-  flutter_native_splash: ^2.3.1
-  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.3.1
+  flutter_lints: ^2.0.1
 
 flutter:
 
