--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -11,37 +11,52 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^8.1.1
   cupertino_icons: ^1.0.2
+
+  # apis
   dio: ^5.1.1
+
+  # Bloc 
+  bloc: ^8.1.1
   equatable: ^2.0.5
   flutter_bloc: ^8.1.2
-  flutter_date_picker_timeline: ^0.3.3
-  flutter_screenutil: ^5.7.0
-  font_awesome_flutter: ^10.5.0
-  get_it: ^7.3.0
-  internet_connection_checker: ^1.0.0+1
-  intl: ^0.17.0
   meta: ^1.8.0
+
+  # firebase
+  cloud_firestore: ^4.8.3
+  firebase_auth: ^4.7.0
+  firebase_core: ^2.15.0
+
+  # UI 
+  another_flushbar: ^1.12.30
+  flutter_date_picker_timeline: ^0.3.3
+  flutter_otp_text_field: ^1.1.1
+  flutter_svg: 2.0.7
+  font_awesome_flutter: ^10.5.0
+  syncfusion_flutter_charts: ^21.1.41
+  modal_progress_hud_nsn: ^0.4.0
   persian_datetime_picker: ^2.6.0
+  intl: ^0.17.0
+
+  # Responsive
+  flutter_screenutil: ^5.7.0
+
+  # service locator
+  get_it: ^7.3.0
+
+  # network
+  internet_connection_checker: ^1.0.0+1
+
+  # local database
   shared_preferences: ^2.1.0
   sqflite: ^2.2.8
-  syncfusion_flutter_charts: ^21.1.41
-  webview_flutter: ^4.2.0
-  flutter_svg: 2.0.7
-  another_flushbar: ^1.12.30
-  firebase_core: ^2.14.0
-  # firebase_auth: ^4.6.3
-  modal_progress_hud_nsn: ^0.4.0
-  test_api:
-  # cloud_firestore: ^4.8.2
-  flutter_otp_text_field: ^1.1.1
+  email_otp: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^2.3.1
   flutter_lints: ^2.0.1
+  flutter_native_splash: ^2.3.1
 
 flutter:
 
@@ -50,7 +65,6 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -62,7 +76,6 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-
 flutter_native_splash:
   # the image of screen  (the image shouldn't be .svg)
   image: assets/images/logo_2000.jpg
