--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.1.0
   sqflite: ^2.2.8
   email_otp: ^2.0.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -76,6 +78,7 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  
 flutter_native_splash:
   # the image of screen  (the image shouldn't be .svg)
   image: assets/images/logo_2000.jpg
