fix: improve app architecture

--- a/flutter/android/app/src/main/AndroidManifest.xml
+++ b/flutter/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.google_solution2">
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="google_solution2"
         android:name="${applicationName}"
